--- a/contacts.html
+++ b/contacts.html
@@ -38,7 +38,7 @@
         </ul>
       </div>
     </header>
-    <section id="contacts" class="catalog">
+    <section id="contacts" class="catalog container">
       <h2>Свяжитесь с нами</h2>
       <p>Мы всегда рады помочь! Вы можете связаться с нами через:</p>
 
