--- a/index.html
+++ b/index.html
@@ -44,24 +44,117 @@
           <h2>Каталог</h2>
           <div class="grid">
             <div class="product-card">
-              <img
-                src="./img/Zadvizhki/033a0867-2b79-11ee-8195-2cf05da87ece_04eb8a51-2b79-11ee-8195-2cf05da87ece-360x233.jpg"
-                alt="Фото компенсатора"
-              />
+              <img src="./img/Valves AB/logo.png" alt="Фото вентиля AB" />
               <div class="gradient"></div>
               <div class="text">
-                <p>Компенсатор</p>
+                <p>Вентили AB</p>
               </div>
             </div>
-
+            <div class="product-card">
+              <img src="./img/Valves T/logo.png" alt="Фото вентиля T" />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Вентили T</p>
+              </div>
+            </div>
             <div class="product-card">
               <img
-                src="./img/Zadvizhki/033a0867-2b79-11ee-8195-2cf05da87ece_04eb8a51-2b79-11ee-8195-2cf05da87ece-360x233.jpg"
-                alt="Фото компенсатора"
+                src="./img/Valves check AO/logo.png"
+                alt="Фото клапанов обратных АО"
               />
               <div class="gradient"></div>
               <div class="text">
-                <p>Компенсатор</p>
+                <p>Клапаны обратные АО</p>
+              </div>
+            </div>
+            <div class="product-card">
+              <img
+                src="./img/Valves check T/logo.png"
+                alt="Фото клапанов обратных Т"
+              />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Клапаны обратные Т</p>
+              </div>
+            </div>
+            <div class="product-card">
+              <img src="./img/Gearboxes AP/logo.png" alt="Фото редукторов АР" />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Редукторы АР</p>
+              </div>
+            </div>
+            <div class="product-card">
+              <img src="./img/Gearboxes T/logo.png" alt="Фото редукторов Т" />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Редукторы Т</p>
+              </div>
+            </div>
+            <div class="product-card">
+              <img
+                src="./img/Valves safety AP/logo.png"
+                alt="Фото клапанов Предохранительных АП"
+              />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Клапаны предохранительные АП</p>
+              </div>
+            </div>
+            <div class="product-card">
+              <img
+                src="./img/Valves safety T/logo.png"
+                alt="Фото клапанов Предохранительных Т"
+              />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Клапаны предохранительные Т</p>
+              </div>
+            </div>
+            <div class="product-card">
+              <img src="./img/Filters AF/logo.png" alt="Фото фильтров АФ" />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Фильтры АФ</p>
+              </div>
+            </div>
+            <div class="product-card">
+              <img src="./img/Filters T/logo.png" alt="Фото фильтров Т" />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Фильтры Т</p>
+              </div>
+            </div>
+            <div class="product-card">
+              <img
+                src="./img/Valves pneumoelectric /logo.png"
+                alt="Фото 
+                Пневмоэлектроклапанов АЭ"
+              />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Пневмоэлектроклапаны АЭ</p>
+              </div>
+            </div>
+            <div class="product-card">
+              <img
+                src="./img/Valves pneumoelectric PAKDD/logo.png"
+                alt="Фото 
+                Пневмоэлектроклапанов ПЭКДД"
+              />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Пневмоэлектроклапаны ПЭКДД</p>
+              </div>
+            </div>
+            <div class="product-card">
+              <img
+                src="./img/off-valves/logo.png"
+                alt="Фото клапанов отсечных Т"
+              />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Клапаны отсечные Т</p>
               </div>
             </div>
           </div>
