--- a/selection_of_fittings.html
+++ b/selection_of_fittings.html
@@ -28,6 +28,11 @@
       </div>
       <div class="burger-part">
         <ul>
+          <li>
+            <div class="logo">
+              <a href="index.html">Криоарматура</a>
+            </div>
+          </li>
           <li><a href="about.html">О нас</a></li>
           <li><a href="contacts.html">Контакты</a></li>
           <li>
