--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
         <div class="container">
           <h2>Каталог</h2>
           <div class="grid">
-            <div class="product-card">
+            <div class="product-card" data-category="Вентили AB">
               <img src="./img/Valves AB/logo.png" alt="Фото вентиля AB" />
               <div class="gradient"></div>
               <div class="text">
                 <p>Вентили AB</p>
               </div>
             </div>
-            <div class="product-card">
+            <div class="product-card" data-category="Вентили T">
               <img src="./img/Valves T/logo.png" alt="Фото вентиля T" />
               <div class="gradient"></div>
               <div class="text">
                 <p>Вентили T</p>
               </div>
             </div>
-            <div class="product-card">
+            <div class="product-card" data-category="Клапаны обратные АО">
               <img
                 src="./img/Valves check AO/logo.png"
                 alt="Фото клапанов обратных АО"
@@ -72,7 +72,7 @@
                 <p>Клапаны обратные АО</p>
               </div>
             </div>
-            <div class="product-card">
+            <div class="product-card" data-category="Клапаны обратные Т">
               <img
                 src="./img/Valves check T/logo.png"
                 alt="Фото клапанов обратных Т"
@@ -82,21 +82,24 @@
                 <p>Клапаны обратные Т</p>
               </div>
             </div>
-            <div class="product-card">
+            <div class="product-card" data-category="Редукторы АР">
               <img src="./img/Gearboxes AP/logo.png" alt="Фото редукторов АР" />
               <div class="gradient"></div>
               <div class="text">
                 <p>Редукторы АР</p>
               </div>
             </div>
-            <div class="product-card">
+            <div class="product-card" data-category="Редукторы Т">
               <img src="./img/Gearboxes T/logo.png" alt="Фото редукторов Т" />
               <div class="gradient"></div>
               <div class="text">
                 <p>Редукторы Т</p>
               </div>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Клапаны предохранительные АП"
+            >
               <img
                 src="./img/Valves safety AP/logo.png"
                 alt="Фото клапанов Предохранительных АП"
@@ -106,7 +109,10 @@
                 <p>Клапаны предохранительные АП</p>
               </div>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Клапаны предохранительные Т"
+            >
               <img
                 src="./img/Valves safety T/logo.png"
                 alt="Фото клапанов Предохранительных Т"
@@ -116,21 +122,21 @@
                 <p>Клапаны предохранительные Т</p>
               </div>
             </div>
-            <div class="product-card">
+            <div class="product-card" data-category="Фильтры АФ">
               <img src="./img/Filters AF/logo.png" alt="Фото фильтров АФ" />
               <div class="gradient"></div>
               <div class="text">
                 <p>Фильтры АФ</p>
               </div>
             </div>
-            <div class="product-card">
+            <div class="product-card" data-category="Фильтры Т">
               <img src="./img/Filters T/logo.png" alt="Фото фильтров Т" />
               <div class="gradient"></div>
               <div class="text">
                 <p>Фильтры Т</p>
               </div>
             </div>
-            <div class="product-card">
+            <div class="product-card" data-category="Пневмоэлектроклапаны АЭ">
               <img
                 src="./img/Valves pneumoelectric /logo.png"
                 alt="Фото 
@@ -141,7 +147,10 @@
                 <p>Пневмоэлектроклапаны АЭ</p>
               </div>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Пневмоэлектроклапаны ПЭКДД"
+            >
               <img
                 src="./img/Valves pneumoelectric PAKDD/logo.png"
                 alt="Фото 
@@ -152,7 +161,7 @@
                 <p>Пневмоэлектроклапаны ПЭКДД</p>
               </div>
             </div>
-            <div class="product-card">
+            <div class="product-card" data-category="Клапаны отсечные Т">
               <img
                 src="./img/off-valves/logo.png"
                 alt="Фото клапанов отсечных Т"
