--- a/products-category.html
+++ b/products-category.html
@@ -45,6 +45,7 @@
     </header>
 
     <main class="main">
+      <h1 class="category-title">Каталог</h1>
       <div class="catalog grid">
         <div class="catalog-item">
           <div class="catalog-item-title">
