--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         <div class="container">
           <h2>Каталог</h2>
           <div class="grid">
+            <div class="product-card" data-category="Все категории">
+              <img src="./img/all-categories.png" alt="Фото всех категорий" />
+              <div class="gradient"></div>
+              <div class="text">
+                <p>Все товары</p>
+              </div>
+            </div>
             <div class="product-card" data-category="Вентили AB">
               <img src="./img/Valves AB/logo.png" alt="Фото вентиля AB" />
               <div class="gradient"></div>
