--- a/selection_of_fittings.html
+++ b/selection_of_fittings.html
@@ -46,11 +46,13 @@
 
     <main>
       <div class="container catalog">
-        <h1>Подбор трубопроводной арматуры</h1>
+        <div class="fittings-section-header">
+          <h1 class="fittings-section-title">Подбор трубопроводной арматуры</h1>
+        </div>
 
-        <section>
-          <h2>Общее описание</h2>
-          <p>
+        <section class="fittings-section-info">
+          <h2 class="fittings-section-subtitle">Общее описание</h2>
+          <p class="fittings-section-text">
             Трубопроводная арматура используется при монтаже и обслуживании
             систем водо- и газоснабжения, отопления, а также для перекачки
             жидкостей, газов, вязких и порошковых веществ. Ее основная задача —
@@ -59,13 +61,15 @@
           </p>
         </section>
 
-        <section>
-          <h2>Как выбрать трубопроводную арматуру</h2>
-          <p>
+        <section class="fittings-section-info">
+          <h2 class="fittings-section-subtitle">
+            Как выбрать трубопроводную арматуру
+          </h2>
+          <p class="fittings-section-text">
             Выбор трубопроводной арматуры зависит от нескольких ключевых
             факторов:
           </p>
-          <ul>
+          <ul class="fittings-section-list">
             <li>
               <strong>Назначение:</strong> арматура должна выполнять функции
               открытия/закрытия потока или регулирования, смешивания.
@@ -90,9 +94,9 @@
           </ul>
         </section>
 
-        <section>
-          <h2>Базовые параметры</h2>
-          <ul>
+        <section class="fittings-section-info">
+          <h2 class="fittings-section-subtitle">Базовые параметры</h2>
+          <ul class="fittings-section-list">
             <li>
               <strong>Условный проход (DN/Ду):</strong> внутренний диаметр,
               определяющий пропускную способность.
@@ -108,9 +112,9 @@
           </ul>
         </section>
 
-        <section>
-          <h2>Виды арматуры</h2>
-          <ul>
+        <section class="fittings-section-info">
+          <h2 class="fittings-section-subtitle">Виды арматуры</h2>
+          <ul class="fittings-section-list">
             <li>
               <strong>Запорная:</strong> для полного или частичного перекрытия
               потока.
