--- a/about.html
+++ b/about.html
@@ -46,14 +46,16 @@
 
     <main class="main">
       <div class="catalog">
-        <section id="overview">
-          <h2>Общее описание</h2>
-          <p>
+        <section class="section-overview" id="overview">
+          <div class="section-header">
+            <h2 class="section-title">Общее описание</h2>
+          </div>
+          <p class="section-text">
             Компания “Криоарматура” уже более 20 лет успешно работает на рынке
             поставок стендовой, воздушной и криогенной арматуры, являясь
             надежным партнером для ведущих предприятий России.
           </p>
-          <p>
+          <p class="section-text">
             Наша продукция востребована в таких высокотехнологичных отраслях,
             как космическая промышленность, нефтегазовый сектор и
             машиностроение.
@@ -61,8 +63,10 @@
         </section>
 
         <section id="clients">
-          <h2>Наши клиенты</h2>
-          <p>
+          <div class="section-header">
+            <h2 class="section-title">Наши клиенты</h2>
+          </div>
+          <p class="section-text">
             Мы гордимся долгосрочным сотрудничеством с такими корпорациями, как:
           </p>
           <div class="companies-grid">
@@ -107,9 +111,11 @@
           </div>
         </section>
 
-        <section id="services">
-          <h2>Услуги</h2>
-          <p>
+        <section class="section-services" id="">
+          <div class="section-header">
+            <h2 class="section-title">Услуги</h2>
+          </div>
+          <p class="section-text">
             Кроме поставок, “Криоарматура” предоставляет полный комплекс услуг,
             включая консультации по выбору оборудования, что позволяет нашим
             клиентам быть уверенными в надежности и долговечности поставленных
@@ -117,9 +123,11 @@
           </p>
         </section>
 
-        <section id="team">
-          <h2>Наша команда</h2>
-          <p>
+        <section class="section-team" id="team">
+          <div class="section-header">
+            <h2 class="section-title">Наша команда</h2>
+          </div>
+          <p class="section-text">
             Наша команда объединяет высококвалифицированных специалистов,
             которые постоянно совершенствуют свои знания и следят за новейшими
             тенденциями в отрасли. Мы стремимся не только удовлетворять
@@ -128,9 +136,11 @@
           </p>
         </section>
 
-        <section id="mission">
-          <h2>Наша миссия</h2>
-          <p>
+        <section class="section-mission" id="mission">
+          <div class="section-header">
+            <h2 class="section-title">Наша миссия</h2>
+          </div>
+          <p class="section-text">
             “Криоарматура” — это ваш партнер на пути к инновациям и
             стабильности.
           </p>
