--- a/contacts.html
+++ b/contacts.html
@@ -21,7 +21,7 @@
           <a href="about.html">О нас</a>
           <a href="contacts.html">Контакты</a>
           <a href="selection_of_fittings.html"
-            >Как правильно подобрать арматуру</a
+            >Подбор трубопроводной арматуры</a
           >
         </nav>
         <div class="burger-menu">
@@ -178,7 +178,9 @@
         <nav class="nav">
           <a href="about.html">О нас</a>
           <a href="contacts.html">Контакты</a>
-          <a href="selection_of_fittings.html">Подписка</a>
+          <a href="selection_of_fittings.html"
+            >Подбор трубопроводной арматуры</a
+          >
         </nav>
       </div>
     </footer>
