--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <img src="./img/all-categories.png" alt="Фото всех категорий" />
               <div class="gradient"></div>
               <div class="text">
-                <p>Все товары</p>
+                <p>Все категории</p>
               </div>
             </div>
             <div class="product-card" data-category="Вентили AB">
