--- a/products-category.html
+++ b/products-category.html
@@ -46,10 +46,11 @@
 
     <main class="main">
       <h1 class="category-title">Каталог</h1>
+      <div id="product-container"></div>
 
       <!-- #region Вентиль АВ -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="img/Valves AB/av-011.jpg" alt="av-011" />
           <div class="gradient"></div>
@@ -267,13 +268,13 @@
             <p>Вентиль АВ-107</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Вентиль Т -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/Valves T/t-100.jpg" alt="t-100" />
           <div class="gradient"></div>
@@ -428,13 +429,13 @@
             <p>Вентиль Т184</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Клапан обратный АО -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/Valves check AO/check-ao-002m.jpg" alt="ao-002m" />
           <div class="gradient"></div>
@@ -680,13 +681,13 @@
             <p>Клапан обратный АО-098</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Клапан обратный Т -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/Valves check T/check-t-300.jpg" alt="т-300" />
           <div class="gradient"></div>
@@ -813,13 +814,13 @@
             <p>Клапан обратный Т364</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Редуктор АР -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/Gearboxes AP/ar-003.jpg" alt="ар-003" />
           <div class="gradient"></div>
@@ -1135,13 +1136,13 @@
             <p>Редуктор АР-153</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Редуктор Т -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/Gearboxes T/t-600.jpg" alt="t-600" />
           <div class="gradient"></div>
@@ -1226,13 +1227,13 @@
             <p>Редуктор Т640</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Клапан предохранительный АП -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/no-photo.jpg" alt="au-111-500" />
           <div class="gradient"></div>
@@ -1471,13 +1472,13 @@
             <p>Клапан предохранительный АП-107</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Клапан предохранительный Т -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/no-photo.jpg" alt="t-408" />
           <div class="gradient"></div>
@@ -1576,13 +1577,13 @@
             <p>Клапан предохранительный Т460</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Фильтр АФ -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/Filters AF/af-002.jpg" alt="af-002" />
           <div class="gradient"></div>
@@ -1926,13 +1927,13 @@
             <p>Фильтр АФ-094</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Фильтр Т -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/no-photo.jpg" alt="t-513" />
           <div class="gradient"></div>
@@ -2108,13 +2109,13 @@
             <p>Фильтр Т584</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Пневмоэлектроклапан АЭ -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/no-photo.jpg" alt="ae-003" />
           <div class="gradient"></div>
@@ -2360,13 +2361,13 @@
             <p>Пневмоэлектроклапан АЭ-144</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Клапаны отсечные -->
 
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/off-valves/t-210.jpg" alt="t-210" />
           <div class="gradient"></div>
@@ -2563,12 +2564,12 @@
             <p>Клапан отсечной Т286</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- #endregion -->
 
       <!-- #region Пневмоэлектроклапан ПЭКДД -->
-      <div class="catalog grid">
+      <!-- <div class="catalog grid">
         <div class="product-card">
           <img src="./img/Valves pneumoelectric PAKDD/PAKDD.jpg" alt="PAKDD" />
           <div class="gradient"></div>
@@ -2586,26 +2587,26 @@
             <p>Пневмоэлектроклапан ПЭКДД М2</p>
           </div>
         </div>
+      </div> -->
 
-        <!-- #endregion -->
+      <!-- #endregion -->
 
-        <!-- #region Запорная арматура -->
-        <div class="catalog grid">
-          <div class="product-card">
-            <img src="./img/off-valves-bamz/KC7154.jpg" alt="KC7154" />
-            <div class="gradient"></div>
-            <div class="text">
-              <p>Клапан КС7154</p>
-            </div>
-          </div>
-          <div class="product-card">
-            <img src="./img/off-valves-bamz/PC-250-58.jpg" alt="PC-250-58" />
-            <div class="text">
-              <p>Редуктор РС-250-58</p>
-            </div>
+      <!-- #region Запорная арматура -->
+      <!-- <div class="catalog grid">
+        <div class="product-card">
+          <img src="./img/off-valves-bamz/KC7154.jpg" alt="KC7154" />
+          <div class="gradient"></div>
+          <div class="text">
+            <p>Клапан КС7154</p>
           </div>
         </div>
-      </div>
+        <div class="product-card">
+          <img src="./img/off-valves-bamz/PC-250-58.jpg" alt="PC-250-58" />
+          <div class="text">
+            <p>Редуктор РС-250-58</p>
+          </div>
+        </div>
+      </div> -->
 
       <!-- #endregion -->
     </main>
